Adding model to heartbeats

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,4 +3,8 @@
 {{else}}
   {{#link-to 'login'}}Login{{/link-to}}
 {{/if}}
+<br>
+{{#link-to 'heartbeat'}}Heartbeats{{/link-to}}
+<br>
+{{#link-to 'galvanicresistance'}}Galvanic{{/link-to}}
 {{outlet}}
