Adding model to skintemperature

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,4 +7,6 @@
 {{#link-to 'heartbeat'}}Heartbeats{{/link-to}}
 <br>
 {{#link-to 'galvanicresistance'}}Galvanic{{/link-to}}
+<br>
+{{#link-to 'skintemperature'}}Temperature{{/link-to}}
 {{outlet}}
