Adding login after signup

--- a/app/templates/signup.hbs
+++ b/app/templates/signup.hbs
@@ -23,7 +23,7 @@
     {{/link-to}}
     {{#if error}}
       <p>
-        <div class="alert alert-danger">Username already used.</div>
+        <div class="alert alert-danger">Invalid values.</div>
       </p>
     {{/if}}
   </form>
