--- a/app/templates/signup.hbs
+++ b/app/templates/signup.hbs
@@ -1,30 +1,27 @@
-<div class="form-container">
+<div class="container">
   <form {{action 'signup' on="submit"}}>
-    <h2>Sign up</h2>
+    <h1>Cadastrar</h1>
 
-    {{input id='username' placeholder='Enter Login' value=username}}
-    {{input id='password' placeholder='Enter Password' type='password' value=password}}
-    {{input id='token' placeholder='Insert a valid Token' value=token}}
+    <div class="form-group">
+      <label>Login</label>
+      {{input id='username' value=username class="form-control"}}
+    </div>
+
+    <div class="form-group">
+      <label>Senha</label>
+      {{input id='password' type='password' value=password class="form-control"}}
+    </div>
 
     {{#if signupError}}
       <p> {{signupError}} </p>
     {{/if}}
 
-    <button {{action 'signup' username password token}} disabled={{isSigningUp}}>
+    <button {{action 'signup' username password}} class="btn btn-info" disabled={{isSigningUp}}>
       {{#if isSigningUp}}
-        Signing up...
+        Cadastrando...
       {{else}}
-        Sign up
+        Cadastrar
       {{/if}}
     </button>
-
-    {{#link-to 'login'}}
-      Login
-    {{/link-to}}
-    {{#if error}}
-      <p>
-        <div class="alert alert-danger">Invalid values.</div>
-      </p>
-    {{/if}}
   </form>
 </div>
