Writing messages in portuguese

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -24,7 +24,7 @@
         {{/nav.item}}
         {{#nav.item}}
           <a href="#" {{action 'invalidateSession'}}>
-            Logout
+            Sair
           </a>
         {{/nav.item}}
       {{else}}
