--- a/app/templates/dashboard/heartbeat/index.hbs
+++ b/app/templates/dashboard/heartbeat/index.hbs
@@ -1,16 +1,1 @@
-{{#each model as |heartbeat|}}
-  <tr>
-    <td>
-      {{heartbeat.owner}}
-    </td>
-    <td>
-      {{heartbeat.created}}
-    </td>
-    <td>
-      {{heartbeat.beats}}
-    </td>
-    <td>
-      {{heartbeat.is_critical}}
-    </td>
-  </tr>
-{{/each}}
+{{ember-chart type='line' data=data}}
