Adding dinamic reloader css

--- a/app/templates/signup.hbs
+++ b/app/templates/signup.hbs
@@ -1,6 +1,6 @@
 <div class="container jumbotron">
   <form {{action 'signup' on="submit"}}>
-    <h1>Cadastrar</h1>
+    <h1><center>Cadastrar</center></h1>
 
     <div class="form-group">
       <label>Login</label>
