Removing theme from charts and adding wheelshare domain to config

--- a/app/templates/dashboard/galvanicresistance/index.hbs
+++ b/app/templates/dashboard/galvanicresistance/index.hbs
@@ -1,1 +1,1 @@
-{{high-charts  chartOptions=chartOptions content=chartData theme=theme}}
+{{high-charts  chartOptions=chartOptions content=chartData}}
