--- a/app/templates/dashboard/heartbeat/index.hbs
+++ b/app/templates/dashboard/heartbeat/index.hbs
@@ -1,1 +1,1 @@
-{{high-charts  chartOptions=chartOptions content=chartData theme=theme}}
+{{high-charts  chartOptions=chartOptions content=chartData}}
